fix(): Cleanup navigation styles and line out light and dark mode

--- a/src/app.css
+++ b/src/app.css
@@ -94,6 +94,9 @@
   :root {
     --ion-background-color: var(--ion-color-dark);
   }
+  .main-content {
+    --ion-text-color: #ffffff;
+  }
 }
 
 noscript {
